MOC-19: [BE] Refactoring folder and apply Controller Advice to Handler Exception